[package]
name = "mycanvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# path for some config json file
[dependencies]
tui = "0.17.0"
clap = "3.1.6"
crossterm = "0.22"
serde_json = " 1.0.59"
reqwest = "0.11.9"

tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"